# blobgrid

./: Cargo.toml  LICENSE  README.md
config/: blobgrid.nginx.conf  blobgrid.systemd.conf
frontend/: index.html  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  canvas_old.html
frontend/src/lib/: .canvas.svelte.un~  bit_utils.ts  canvas.svelte  subcanvas.svelte  subcanvas2.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/canvas/: canvas.svelte
frontend/src/routes/subgrid/: +page.svelte
src/: bit_utils.rs  config.rs  grid.rs  grid1.rs  main.rs  server.rs  state.rs  ws.rs
src/fine_grained/: chunk.rs  grid.rs  mod.rs
