[package]
name = "blobgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
base64 = "0.22.1"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-zstd"] }
