[package]
name = "blobgrid"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
base64 = "0.22.1"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["compression-br", "compression-deflate", "compression-zstd"] }
